Change uses of Collections.unmodifyableX() to X.copyOf() where possible